# MAI_OS_2025

./: .gitignore  CMakeLists.txt  README.md
cmake/: Utils.cmake
lab1/: CMakeLists.txt
lab1/cli/: child.c  parent.c
lab1/include/lab1/: messages.h
lab2/: CMakeLists.txt
lab2/cli/: lab2.c
lab2/include/lab2/: geometry.h  metrics.h
lab2/src/lab2/: geometry.c  metrics.c
lab3/: CMakeLists.txt
lab3/cli/: child.c  parent.c
lab3/include/lab1/: constants.h
lab4/: CMakeLists.txt
lab4/cli/: lab4_1.c  lab4_2.c
lab4/include/lab4/: commands.h  mathematics.h
lab4/src/lab4/: commands.c  mathematics_impl1.c  mathematics_impl2.c
